# tpik

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE.md  README.md  bitbucket-pipelines.yml
.github/workflows/: ci.yml
docs/: doxymain.cc  tpik.doxyfile
docs/bootstrapped/: tpik_bs.doxyfile
docs/bootstrapped/doxy-bootstrapped/: customdoxygen.css  footer.html  header.html
docs/doxygen-awesome-css/: Doxyfile
docs/doxygen-awesome-css/doxygen-custom/: header.html
docs/standard/: rml.doxyfile  tpik.doxyfile
include/: Action.h  ActionManager.h  CoordinationArmVehicleSolver.h  EqualityTask.h  InequalityTask.h  PriorityLevel.h  Solver.h  TPIK.h  TPIKDefines.h  TPIKExceptions.h  TPIKlib.h  TPIKlibHeader.h  Task.h  iCAT.h  tpikExceptions.h
include/test/: TestTask.h
include/tpik/: Action.h  ActionManager.h  CartesianTask.h  ConfHelpers.h  CoordinationArmVehicleSolver.h  EqualityTask.h  InequalityTask.h  NonReactiveTask.h  PriorityLevel.h  ReactiveTask.h  Solver.h  TPIK.h  TPIKDefines.h  TPIKExceptions.h  TPIKlib.h  Task.h  iCAT.h
include/tpik_internal/: futils.h
src/: Action.cpp  ActionManager.cpp  CartesianTask.cpp  CoordinationArmVehicleSolver.cpp  EqualityTask.cpp  InequalityTask.cpp  NonReactiveTask.cpp  PriorityLevel.cpp  ReactiveTask.cpp  Solver.cpp  TPIK.cpp  Task.cpp  iCAT.cpp
test/: TestTask.cpp  tpikTest.cpp
